--- a/Blurry Loading/style.css
+++ b/Blurry Loading/style.css
@@ -1,30 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 * {
-    box-sizing: border-box;  /* border box includes padding and margin both when we set a box height and width */ 
+    box-sizing: border-box;  
 }
 
 body {
     font-family: 'Ubuntu', sans-serif;
     display: flex;                   
-    align-items: center;                   /* along the y-axis/vertical-axis */
-    justify-content: center;               /* along the x-axis/horizontal-axis */
+    align-items: center;                   
+    justify-content: center;               
     height: 100vh;
     overflow: hidden;
     margin: 0; 
 }
 
 .bg {
-    background: url('image/blacksmith.jpg')
-                     no-repeat center center/cover; /* Both center means we want to position the image at the center of the x-axis & y-axis respectively.
-                                                       and "cover" is used to cover the whole image. 
-                                                       We can ignore the 2nd center and it will still give the same result don't know why */
+    background: url('image/blacksmith.jpg') no-repeat center center/cover;                  
     position: absolute;
-    top: -30px;  /* this is done for the image when it is blur */
-    left: -30px; /* this is done for the image when it is blur */
+    top: -30px;  
+    left: -30px; 
     width: calc(100vw + 60px);
     height: calc(100vh + 60px);
-    z-index: -1; /* -1 so that the loading text content(0%) should be put above the backgroung image */
+    z-index: -1; 
     filter: blur(0px);                  
 }
 
